2006-07-14  John W. Eaton  <jwe@octave.org>

	* c-file-ptr-stream.h (c_file_ptr_stream::c_file_ptr_stream):
	Qualify init.

2006-07-13  John W. Eaton  <jwe@octave.org>

	* oct-map.h (Octave_map::del): Add missing std:: qualifier to use
	of find template.

2006-07-07  John W. Eaton  <jwe@octave.org>

	* ov.h (octave_value::is_bool_scalar): New function.
	* ov-base.h (octave_base_value::is_bool_scalar): New function.
	* ov-bool.h (octave_bool::is_bool_scalar): New function.

	* oct-map.cc (Octave_map::keys): Use assert.
	(Octave_map::assign): Avoid inserting new key in map unless
	assignment to cell succeeds.

	* oct-map.h (Octave_map::del): Only touch key_list if map contains key.
	Assert that key_list contains key.

	* oct-map.h (Octave_map::maybe_add_to_key_list): For efficiency,
	check map, not key_list.  From Paul Kienzle  <pkienzle@users.sf.net>.

2006-07-06  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Declare mrowsc volatile.

	* ov-struct.cc (octave_struct::print_raw): Print keys in key_list
	order.

	* oct-map.h (Octave_map::key_list): New data member.
	(Octave_map::maybe_add_to_key_list): New function.
	(Octave_map::key_list_iterator, Octave_map::const_key_list_iterator):
	New typedefs.
	(Octave_map::del): Also delete key from key_list.
	* oct-map.cc (Octave_map::keys): Compute return value from
	key_list instead of map.
	(Octave_map::assign, Octave_map::contents): Call maybe_add_to_key_list.
	* oct-map.h, oct-map.cc (Octave_map::Octave_map):
	Insert keys in key_list.

	* oct-map.h (Octave_map::Octave_map (const dim_vector&,
	const string_vector&)): New arg, key_list_arg.
	* oct-map.cc: Move definition here.

2006-07-05  John W. Eaton  <jwe@octave.org>

	* mex.cc (mexGetVariable): Rename from mexGetArray, swap arguments.
	(mexGetVariablePtr): Rename from mexGetArrayPtr, swap arguments.
	(mexErrMsgIdAndTxt, mexWarnMsgIdAndTxt): New functions.
	* mexproto.h: Provide decls.
	Include decls for as yet unsupported functions.