@@ -135,10 +135,7 @@ public:
 	   int nargout);
 
   virtual octave_value
-  do_index_op (const octave_value_list& idx, int resize_ok);
-
-  virtual octave_value
-  do_index_op (const octave_value_list& idx);
+  do_index_op (const octave_value_list& idx, bool resize_ok = false);
 
   virtual octave_value_list
   do_multi_index_op (int nargout, const octave_value_list& idx);
