@@ -65,7 +65,7 @@ octave_complex::try_narrowing_conversion (void)
 }
 
 octave_value
-octave_complex::do_index_op (const octave_value_list& idx, int resize_ok)
+octave_complex::do_index_op (const octave_value_list& idx, bool resize_ok)
 {
   octave_value retval;
 
