@@ -174,7 +174,8 @@ public:
   octave_base_value *empty_clone (void) const
     { return new OCTAVE_VALUE_INT_SCALAR_T (); }
 
-  octave_value do_index_op (const octave_value_list& idx, int resize_ok)
+  octave_value do_index_op (const octave_value_list& idx,
+			    bool resize_ok = false)
     {
       octave_value retval;
 
