@@ -125,7 +125,7 @@ octave_list::subsref (const std::string& type,
 }
 
 octave_value
-octave_list::do_index_op (const octave_value_list& idx, int resize_ok)
+octave_list::do_index_op (const octave_value_list& idx, bool resize_ok)
 {
   octave_value retval;
 
