@@ -110,7 +110,7 @@ octave_range::subsref (const std::string& type,
 }
 
 octave_value
-octave_range::do_index_op (const octave_value_list& idx, int resize_ok)
+octave_range::do_index_op (const octave_value_list& idx, bool resize_ok)
 {
   // FIXME -- this doesn't solve the problem of
   //
