@@ -54,7 +54,7 @@ DEFINE_OCTAVE_ALLOCATOR (octave_scalar);
 DEFINE_OV_TYPEID_FUNCTIONS_AND_DATA (octave_scalar, "scalar", "double");
 
 octave_value
-octave_scalar::do_index_op (const octave_value_list& idx, int resize_ok)
+octave_scalar::do_index_op (const octave_value_list& idx, bool resize_ok)
 {
   octave_value retval;
 
