@@ -85,7 +85,8 @@ public:
 
   type_conv_fcn numeric_conversion_function (void) const;
 
-  octave_value do_index_op (const octave_value_list& idx, int resize_ok)
+  octave_value do_index_op (const octave_value_list& idx,
+			    bool resize_ok = false)
     { return do_index_op_internal (idx, resize_ok); }
 
   void assign (const octave_value_list& idx, const charMatrix& rhs);
@@ -152,7 +153,7 @@ public:
 protected:
 
   octave_value do_index_op_internal (const octave_value_list& idx,
-				     int resize_ok, char type = '"');
+				     bool resize_ok, char type = '"');
 
 private:
 
@@ -215,7 +216,8 @@ public:
 
   bool is_sq_string (void) const { return true; }
 
-  octave_value do_index_op (const octave_value_list& idx, int resize_ok)
+  octave_value do_index_op (const octave_value_list& idx,
+			    bool resize_ok = false)
     { return do_index_op_internal (idx, resize_ok, '\''); }
 
 private:
